added duration to song sections, width to 800

--- a/beat.html
+++ b/beat.html
@@ -81,6 +81,19 @@
                             </a>
                         </div>
                     </div>
+                    <div class='cell duration'>
+                        duration
+
+                        <!-- duration ascending/Descending sort arrows -->
+                        <div class='sort-container'>
+                            <a href='#' class='sort up'>
+                                <div id='sort-duration-up' class='arrow up'></div>
+                            </a>
+                            <a href='#' class='sort down'>
+                                <div id='sort-duration-down' class='arrow down'></div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- .overlay used as a placeholder for pseudo:before to apply box-shadow
