--- a/beat.html
+++ b/beat.html
@@ -81,16 +81,16 @@
                             </a>
                         </div>
                     </div>
-                    <div class='cell duration'>
+                    <div class='cell length'>
                         duration
 
                         <!-- duration ascending/Descending sort arrows -->
                         <div class='sort-container'>
                             <a href='#' class='sort up'>
-                                <div id='sort-duration-up' class='arrow up'></div>
+                                <div id='sort-length-up' class='arrow up'></div>
                             </a>
                             <a href='#' class='sort down'>
-                                <div id='sort-duration-down' class='arrow down'></div>
+                                <div id='sort-length-down' class='arrow down'></div>
                             </a>
                         </div>
                     </div>
